<resources>
    <string name="app_name">Pocket Manager</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="categories">Categories</string>
    <string name="statistics">Statistics</string>
    <string name="reminders">Reminders</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="history">History</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction">Transaction</string>
    <string name="overview">Overview</string>
    <string name="your_total_expense">Your total expense</string>
    <string name="total_expense_amt">00.00</string>
    <string name="tv_amount">amount</string>
    <string name="tv_date">DD/MM/YYYY</string>

    <string name="cat_general">General</string>
    <string name="cat_clothes">Clothes</string>
    <string name="cat_entertainment">Entertainment</string>
    <string name="cat_food">Food</string>
    <string name="cat_health">Health</string>
    <string name="cat_household">Household</string>
    <string name="cat_hygiene">Hygiene</string>
    <string name="cat_pets">Pets</string>
    <string name="cat_presents">Presents</string>
    <string name="cat_sports">Sports</string>
    <string name="cat_transportation">Transportation</string>
    <string name="no_expense_yet">No expense yet.</string>
    <string name="delete_string">Delete</string>
    <string name="add_expense">New expense</string>
    <string name="edit_expense">Edit expense</string>
    <string name="delete_expense">Delete expense</string>
    <string name="delete_exp_dialog_msg">Are you sure you want to delete the expense?</string>
    <string name="expense_deleted">Expense deleted</string>
    <string name="expense_added">Expense added</string>
    <string name="expense_updated">Expense updated</string>
    <string name="expense_category_name_string">Category</string>
    <string name="total">Total</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="error_empty_field">Empty Field</string>
    <string name="error_zero_value">Zero Value</string>
    <string name="incorrect_input">Incorrect Input</string>
    <string name="string_no_categories">No Categories</string>
    <string name="total_string">Total</string>
    <string name="no_expenses">No expenses</string>

    <string name="filter_expenses">Filter</string>
    <string name="filter_option_today">By Today</string>
    <string name="filter_option_week">By Week</string>
    <string name="filter_option_month">By Month</string>
    <string name="filter_option_date">By Date</string>
    <string name="filter_option_range">By Date range</string>
    <string name="filter_todays_expenses">Today\'s expenses</string>
    <string name="filter_weeks_expenses">Week\'s expenses</string>
    <string name="filter_months_expenses">Month\'s expenses</string>
    <string name="filter_date_expenses">For %s</string>
    <string name="filter_date_range_expenses">%1$s - %2$s</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>

    <plurals name="expenses_deleted_plurals_msg">
        <item quantity="one">%d expense deleted</item>
        <item quantity="other">%d expenses deleted</item>
    </plurals>

    <string-array name="predefined_categories">
        <item>@string/cat_general</item>
        <item>@string/cat_clothes</item>
        <item>@string/cat_entertainment</item>
        <item>@string/cat_food</item>
        <item>@string/cat_health</item>
        <item>@string/cat_household</item>
        <item>@string/cat_hygiene</item>
        <item>@string/cat_pets</item>
        <item>@string/cat_presents</item>
        <item>@string/cat_sports</item>
        <item>@string/cat_transportation</item>
    </string-array>
</resources>
