<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:textSize="18sp"
                android:text="@string/total_string" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#000000" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/expenses_report_total_text_view"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:gravity="start|center_vertical"
                android:paddingRight="4dp"
                android:paddingEnd="4dp"
                android:paddingLeft="2dp"
                android:paddingStart="2dp"
                android:textSize="30sp"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/expenses_report_total_currency_text_view"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_toEndOf="@id/expenses_report_total_text_view"
                android:layout_toRightOf="@id/expenses_report_total_text_view"
                android:gravity="end|center_vertical"
                android:paddingRight="4dp"
                android:paddingEnd="4dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:textSize="22sp"
                android:singleLine="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#000000" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rangeDateLayout"
        android:visibility="gone"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/PocketManagerButton"
            android:text="@string/start_date"/>

        <Button
            android:id="@+id/btn_end"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="120dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            style="@style/PocketManagerButton"
            android:text="@string/end_date"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_dateShow"
        android:layout_marginTop="8dp"
        style="@style/PocketManagerButton"
        android:text="@string/tv_date"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1">


        <ListView
            android:id="@+id/expenses_report_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/expenses_report_empty_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/expenses_report_empty_list_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/no_expenses"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
